--- a/backer/package.json
+++ b/backer/package.json
@@ -5,7 +5,14 @@
   "private": true,
   "main": "app.js",
   "scripts": {
-    "test": "node ./app"
+    "app": "node ./app",
+    "service": "docker-compose up -d",
+    "service:down": "docker-compose down",
+    "service:down:all": "docker-compose down --rmi -v all",
+    "service:rebuild": "docker-compose up --build -d && docker system prune --volumes -f",
+    "service:recreate": "docker-compose up --force-recreate -d",
+    "service:restart": "docker-compose restart",
+    "service:stop": "docker-compose stop"
   },
   "keywords": [
     "koa",
